Created all products for the OUR PRODUCTS section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li>CONTACT</li>
             </ul>
         </nav>
+        <li>CARA CARA</li>
         <div class="search-container">
             <form action="">
               <input type="text" placeholder="Search..." name="search">
@@ -54,6 +55,116 @@
         </section>
         <section class="our products">
             <h1>Our Products</h1>
+            <div>
+                <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="one large white bowl and two small grey bowls">
+                <h2>MUNDO BOWLS $48.00</h2>
+                <p>Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean.
+                </p>
+                <a href="">Learn More</a>
+                <button>Add to Cart</button>
+            </div>
+            <div>
+                <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="red vase">
+                <h2>NATUREZA VASE $37.00</h2>
+                <p>Tincidunt praesent semper feugiat nibh
+                    sed. Vulputate mi sit amet mauris
+                    commodo quis imperdiet massa. Amet
+                    tellus cras adipiscing enim eu turpis
+                    egestas pretium aenean.
+                </p>
+                <a href="">Learn More</a>
+                <button>Add to Cart</button>
+            </div>
+            <div>
+                <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="two white bowls. one inside the other">
+                <h2>FEIRA BOWLS $29.00</h2>
+                <p>Tincidunt praesent semper feugiat nibh
+                    sed. Vulputate mi sit amet mauris
+                    commodo quis imperdiet massa. Amet
+                    tellus cras adipiscing enim eu turpis
+                    egestas pretium aenean.
+                </p>
+                <a href="">Learn More</a>
+                <button>Add to Cart</button>
+            </div>
+            <div>
+                <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="two grey pots">
+            <h2>NATUREZA POTS $58.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean.
+            </p>
+            <a href="">Learn More</a>
+            <button>Add to Cart</button>
+            </div>
+            
+            <div>
+                <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="white vase with plant">
+                <h2>PEDRA VASE $31.00</h2>
+                <p>Tincidunt praesent semper feugiat nibh
+                    sed. Vulputate mi sit amet mauris
+                    commodo quis imperdiet massa. Amet
+                    tellus cras adipiscing enim eu turpis
+                    egestas pretium aenean.
+                </p>
+                <a href="">Learn More</a>
+                <button>Add to Cart</button>
+            </div>
+            <div>
+                <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="two grey and white pots">
+                <h2>VIAJA POTS $57.00</h2>
+                <p>Tincidunt praesent semper feugiat nibh
+                    sed. Vulputate mi sit amet mauris
+                    commodo quis imperdiet massa. Amet
+                    tellus cras adipiscing enim eu turpis
+                    egestas pretium aenean.
+                </p>
+                <a href="">Learn More</a>
+                <button>Add to Cart</button>
+            </div>
+            <div>
+                <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="four white plates">
+                <h2>SERVIÇO PLATES $35.00</h2>
+                <p>Tincidunt praesent semper feugiat nibh
+                    sed. Vulputate mi sit amet mauris
+                    commodo quis imperdiet massa. Amet
+                    tellus cras adipiscing enim eu turpis
+                    egestas pretium aenean.
+                </p>
+                <a href="">Learn More</a>
+                <button>Add to Cart</button>
+            </div>
+            <div>            
+                <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="blue vase">
+                <h2>CAMPEÃO VASE $37.00</h2>
+                <p>Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean.
+                </p>
+                <a href="">Learn More</a>
+                <button>Add to Cart</button>
+            </div>
+            <div>            
+                <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="five white bowls">
+                <h2>TROCA BOWLS $25.00</h2>
+                <p>Tincidunt praesent semper feugiat nibh
+                    sed. Vulputate mi sit amet mauris
+                    commodo quis imperdiet massa. Amet
+                    tellus cras adipiscing enim eu turpis
+                    egestas pretium aenean.
+                </p>
+                <a href="">Learn More</a>
+                <button>Add to Cart</button>
+            </div>
+
         </section>
         <section class="contact us">
             <h1>Contact Us</h1>
