Added two photos two the ABOUT US section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 ac turpis egestas maecenas. Odio aenean sed adipiscing diam donec adipiscing tristique
                 risus nec. Sagittis id consectetur purus ut faucibus. Elit duis tristique sollicitudin nibh sit
                 amet commodo.</p>
+            <img src="./assets/Vase_Dame_2048x2048.jpg" alt="white vase with white flowers">
+            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="vase with wheat grass"   
             <p>Nulla porttitor massa id neque aliquam
                 vestibulum morbi. Facilisi nullam vehicula
                 ipsum a arcu cursus vitae congue. Nam libero
