Finished html file + started writing rules for css file

--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
                 <li>PRODUCTS</li>
                 <li>CONTACT</li>
             </ul>
+            <div class="logo">
+                CARA <img src="./assets/icons8-pottery-96.png" alt="orange vase"> CARA
+            </div>
+            <div class="search-container">
+                <form action="">
+                  <input type="text" placeholder="Search" name="search">
+                </form>
+             </div>
+
         </nav>
-        <li>CARA CARA</li>
-        <div class="search-container">
-            <form action="">
-              <input type="text" placeholder="Search..." name="search">
-            </form>
-         </div>
+        <hr>
     </header>
     <main>
-        <section class="about us">
+        <section class="about_us">
             <h1>About Us</h1>
+            <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id
                 faucibus nisl tincidunt. Facilisis mauris sit amet massa. Senectus et netus et malesuada fames
@@ -34,7 +39,7 @@
                 risus nec. Sagittis id consectetur purus ut faucibus. Elit duis tristique sollicitudin nibh sit
                 amet commodo.</p>
             <img src="./assets/Vase_Dame_2048x2048.jpg" alt="white vase with white flowers">
-            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="vase with wheat grass"   
+            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="vase with wheat grass">   
             <p>Nulla porttitor massa id neque aliquam
                 vestibulum morbi. Facilisi nullam vehicula
                 ipsum a arcu cursus vitae congue. Nam libero
@@ -55,8 +60,9 @@
                 </p>
 
         </section>
-        <section class="our products">
+        <section class="our_products">
             <h1>Our Products</h1>
+            <hr>
             <div>
                 <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="one large white bowl and two small grey bowls">
                 <h2>MUNDO BOWLS $48.00</h2>
@@ -105,10 +111,10 @@
             <a href="">Learn More</a>
             <button>Add to Cart</button>
             </div>
-            
             <div>
                 <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="white vase with plant">
                 <h2>PEDRA VASE $31.00</h2>
+                <hr>
                 <p>Tincidunt praesent semper feugiat nibh
                     sed. Vulputate mi sit amet mauris
                     commodo quis imperdiet massa. Amet
@@ -144,7 +150,9 @@
             </div>
             <div>            
                 <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="blue vase">
-                <h2>CAMPEÃO VASE $37.00</h2>
+                <h2>CAMPEÃO VASE</h2>
+                <hr>
+                <h2>37.00</h2>
                 <p>Tincidunt praesent semper feugiat nibh
                 sed. Vulputate mi sit amet mauris
                 commodo quis imperdiet massa. Amet
@@ -157,6 +165,7 @@
             <div>            
                 <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="five white bowls">
                 <h2>TROCA BOWLS $25.00</h2>
+                <hr>
                 <p>Tincidunt praesent semper feugiat nibh
                     sed. Vulputate mi sit amet mauris
                     commodo quis imperdiet massa. Amet
@@ -168,10 +177,32 @@
             </div>
 
         </section>
-        <section class="contact us">
+        <section class="contact_us">
             <h1>Contact Us</h1>
+            <label for="Email">Email</label>
+            <br>
+            <input type="text" id="Email" name="Email" maxlength="16">
+            <br>
+            <label for="freeform">Message</label>
+            <br>
+            <textarea id="freeform" name="freeform" rows="4" cols="50">
+            </textarea>
+            <br>
+            <button>SEND</button>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <img src="./assets/icons8-youtube-96.png">
+        <img src="./assets/icons8-facebook-96 (1).png">
+        <div class="logo">
+            Cara <img src="./assets/icons8-pottery-96 (1).png" alt=""> Cara
+        </div>
+        <img src="./assets/icons8-twitter-96.png">
+        <img src="./assets/icons8-instagram-96.png">
+        <p>Pretium nibh ipsum consequat nisl vel pretium</p>
+        <p>Amet tellus cras adipiscing enim eu turpis</p>
+        <p>Copyright 2015-2020</p>
+        
+    </footer>
 </body>
 </html>
