Saving current work

--- a/index.html
+++ b/index.html
@@ -15,22 +15,28 @@
                 <li>ABOUT</li>
                 <li>PRODUCTS</li>
                 <li>CONTACT</li>
+                <li>
+                    <div class="logo">
+                        CARA <img src="./assets/icons8-pottery-96.png" alt="orange vase"> CARA
+                    </div>
+                </li>
+                <li>
+                    <div class="search-container">
+                        <form action="search">
+                          <input type="text" placeholder="Search" name="search">
+                        </form>
+                     </div>
+                </li>
+                <li>
+                    <a>Cart (0)</a>
+                </li>
             </ul>
-            <div class="logo">
-                CARA <img src="./assets/icons8-pottery-96.png" alt="orange vase"> CARA
-            </div>
-            <div class="search-container">
-                <form action="">
-                  <input type="text" placeholder="Search" name="search">
-                </form>
-             </div>
-
         </nav>
         <hr>
     </header>
     <main>
         <section class="about_us">
-            <h1>About Us</h1>
+            <h1 class="section-header">About Us</h1>
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id
@@ -63,9 +69,10 @@
         <section class="our_products">
             <h1>Our Products</h1>
             <hr>
+            <br>
             <div>
                 <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="one large white bowl and two small grey bowls">
-                <h2>MUNDO BOWLS $48.00</h2>
+                <h2>MUNDO BOWLS</h2> <h2>$48.00</h2>
                 <p>Tincidunt praesent semper feugiat nibh
                 sed. Vulputate mi sit amet mauris
                 commodo quis imperdiet massa. Amet
@@ -179,6 +186,7 @@
         </section>
         <section class="contact_us">
             <h1>Contact Us</h1>
+            <hr>
             <label for="Email">Email</label>
             <br>
             <input type="text" id="Email" name="Email" maxlength="16">
@@ -199,6 +207,7 @@
         </div>
         <img src="./assets/icons8-twitter-96.png">
         <img src="./assets/icons8-instagram-96.png">
+        <br>
         <p>Pretium nibh ipsum consequat nisl vel pretium</p>
         <p>Amet tellus cras adipiscing enim eu turpis</p>
         <p>Copyright 2015-2020</p>
