--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li>CONTACT</li>
                 <li>
                     <div class="logo">
-                        CARA <img src="./assets/icons8-pottery-96.png" alt="orange vase"> CARA
+                        C A R A <img src="./assets/icons8-pottery-96.png" alt="orange vase"> C A R A
                     </div>
                 </li>
                 <li>
@@ -35,8 +35,14 @@
         <hr>
     </header>
     <main>
+        <section class="home">
+            <a class="banner">
+                <img src="assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="hands/pottery" style>
+                <div class="overlay">CERAMICS CRAFTED BY HAND...  ...FROM THE GROUND UP</div> 
+            </a>
+        </section>
         <section class="about_us">
-            <h1 class="section-header">About Us</h1>
+            <h1>About Us</h1>
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id
@@ -44,8 +50,9 @@
                 ac turpis egestas maecenas. Odio aenean sed adipiscing diam donec adipiscing tristique
                 risus nec. Sagittis id consectetur purus ut faucibus. Elit duis tristique sollicitudin nibh sit
                 amet commodo.</p>
-            <img src="./assets/Vase_Dame_2048x2048.jpg" alt="white vase with white flowers">
-            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="vase with wheat grass">   
+            <div class="image1">
+                <img src="./assets/Vase_Dame_2048x2048.jpg" alt="white vase with white flowers"> 
+            </div>
             <p>Nulla porttitor massa id neque aliquam
                 vestibulum morbi. Facilisi nullam vehicula
                 ipsum a arcu cursus vitae congue. Nam libero
@@ -64,12 +71,14 @@
                 enim eu turpis egestas pretium aenean.
                 Nullam ac tortor vitae purus
                 </p>
+            <div class="image2">
+                <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="vase with wheat grass">
+            </div>
 
         </section>
+        <h1>Our Products</h1>
+        <hr>
         <section class="our_products">
-            <h1>Our Products</h1>
-            <hr>
-            <br>
             <div>
                 <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="one large white bowl and two small grey bowls">
                 <h2>MUNDO BOWLS</h2> <h2>$48.00</h2>
